🎉auto update by Gmeek action

--- a/backup/诗词.md
+++ b/backup/诗词.md
@@ -1,1 +1,54 @@
+
+
 # 一蓑烟雨任平生
+
+## 定风波·莫听穿林打叶声
+
+        作者：[苏轼]
+
+　　三月七日，沙湖道中遇雨。雨具先去，同行皆狼狈，余独不觉，已而遂晴，故作此词。
+
+　　莫听穿林打叶声，何妨吟啸且徐行。竹杖芒鞋轻胜马，谁怕？一蓑烟雨任平生。
+
+　　料峭春风吹酒醒，微冷，山头斜照却相迎。回首向来萧瑟处，归去，也无风雨也无晴。
+
+**注释**  
+　　芒鞋：草鞋。  
+　　一蓑烟雨任平生：披着蓑衣在风雨里过一辈子也处之泰然。一蓑（suō）：蓑衣，用棕制成的雨披。  
+　　料峭：微寒的样子。  
+　　萧瑟：风雨吹打树叶声。
+
+**译文  **　　三月七日，在沙湖道上赶上了下雨，大家没有雨具，同行的人都觉得很狼狈，只有我不这么觉得。过了一会儿天晴了，就做了这首词。  
+　　不必去理会那穿林打叶的雨声，不妨一边吟咏着、长啸着，一边悠然地行走。竹杖和草鞋轻捷得更胜过马，怕什么！一身蓑衣，足够在风雨中过上它一生。  
+　　略带寒意的春风将我的酒意吹醒，寒意初上，山头初晴的斜阳却殷殷相迎。回头望一眼走过来遇到风雨的地方，我信步归去，既无所谓风雨，也无所谓天晴。
+
+**写作背景**  
+　　元丰五年三月五日，作者在沙湖游玩。三月七日，忽逢大雨，因为作者和同行的人都没有带雨具，同行之人皆觉狼狈。雨过天晴，作者联想到自己人生的坎坷，加上遇见的大雨，写下了这一首千古流传的《定风波》。从文中我们可以感受到作者的豁达与乐观。
+
+**赏析**  
+　　即**苏轼**黄州之贬后的第三个春天。　首句“莫听穿林打叶声”，一方面渲染出雨骤风狂，另一方面又以“莫听”二字点明外物不足萦怀之意。“何妨吟啸且徐行”，是前一句的延伸。在雨中照常舒徐行步，呼应小序“同行皆狼狈，余独不觉”，又引出下文“谁怕”即不怕来。徐行而又吟啸，是加倍写；“何妨”二字透出一点俏皮，更增加挑战色彩。首两句是全篇枢纽，以下词情都是由此生发。  
+　　“竹杖芒鞋轻胜马”，写词人竹杖芒鞋，顶风冲雨，从容前行，以“轻胜马”的自我感受，传达出一种搏击风雨、笑傲人生的轻松、喜悦和豪迈之情。“一蓑烟雨任平生”，此句更进一步，由眼前风雨推及整个人生，有力地强化了作者面对人生的风风雨雨而我行我素、不畏坎坷的超然情怀。  
+　　以上数句，表现出旷达超逸的胸襟，充满清旷豪放之气，寄寓着独到的人生感悟，读来使人耳目为之一新，心胸为之舒阔。  
+　　过片到“山头斜照却相迎”三句，是写雨过天晴的景象。这几句既与上片所写风雨对应，又为下文所发人生感慨作铺垫。  
+　　结尾“回首向来萧瑟处，归去，也无风雨也无晴。”这饱含人生哲理意味的点睛之笔，道出了词人在大自然微妙的一瞬所获得的顿悟和启示：自然界的雨晴既属寻常，毫无差别，社会人生中的政治风云、荣辱得失又何足挂齿？句中“萧瑟”二字，意谓风雨之声，与上片“穿林打叶声”相应和。“风雨”二字，一语双关，既指野外途中所遇风雨，又暗指几乎致他于死地的政治“风雨”和人生险途。\[7\]
+
+**评价**  
+　　读罢全词，令人心情振奋，心境豁然，心灵净化。人生的沉浮、情感的忧乐，在读者的理念中自会有一番全新的体悟。从心理学“白日梦”的角度看，此词实际是作者描绘的一个淡泊从容、旷达超脱的白日梦，在多个方面都非常符合白日梦的特征。  
+　　第一，心情符合白日梦之条件——郁闷不爽。  
+　　写此词前三年，即公元1079年，作者因被诬作诗“谤讪朝廷”遭御史弹劾，被捕入狱，后又被贬为黄州团练副使，宦海沉浮，经历坎坷，理想不竟，抱负未果，使作者几年来一直郁郁不得志，思想上陷入出世与入世的矛盾之中，心情烦闷。  
+　　第二，意境符合白日梦之真谛——宁静自由。  
+　　作者对现实的官场险恶生活非常厌倦，渴望摆脱这种生活，退隐江湖，过一种淡泊宁静、无忧无患、无欲无求、轻松自由的生活，也即“归去”。  
+　　第三，结构具备白日梦之特征——自然完整。　  
+　　入梦的引子是“饮酒”和“下雨”。酒的微醉让作者晕晕乎乎，这是白日梦形成的主要基础。烟雨的迷蒙让天气灰暗朦胧，创设了入梦的良好氛围。  
+　　入梦句是“莫听穿林打叶声”，梦境为“何妨吟啸且徐行，竹杖芒鞋轻胜马，谁怕？一蓑烟雨任平生”。这里作者用“竹杖”“芒鞋”“蓑衣”“烟雨”等意象及雨中“吟啸”“徐行”等动作创设了一个极为美妙的白日梦梦境，活[**脱脱**](https://so.gushiwen.cn/authorv_d5c0a19cf94c.aspx)地勾勒出了一个隐居江湖过着从容淡泊生活的隐士形象，他虽无荣华富贵之享受，但亦无宦海浮沉之忧患，心情得以平静，心境得以安宁。  
+　　梦醒句为“料峭春风吹酒醒，微冷，山头斜照却相迎”。料峭的春风吹醒了醉酒，作者感到冷，一个激凌，头脑清醒了，梦结束了，作者又回到现实之中。这“冷”既是实写酒醒后身体感到冷，也是写梦醒后又想到自己的遭遇而产生的心冷。正在这时，远处山头温暖的夕阳让作者感到了些许暖意，也增添了他战胜逆境的信心。  
+　　过渡句为“回首向来萧瑟处”。虽然“相迎”的斜阳给作者带了一丝温暖，但一想到自己饱含萧瑟风雨的坎坷仕途路——“回首向来萧瑟处”，心中燃起的希望之火又熄灭了！  
+　　梦破后寻梦句为“归去，也无风雨也无晴”。仕途的风雨就如同这自然界的风雨一样变幻无常，他所期盼的仕途阳光又会在多长的风雨之后？与其终日忍受这种提心吊胆之痛，还不如“归去”，退隐江湖，一切平静，无悲无喜，“无雨无晴”。  
+　　第四，情节显露白日梦之特色——亦真亦幻。  
+　　首先，序言中说“同行皆狼狈”，已证明雨之大，而“莫听穿林打叶声，何妨吟啸且徐行”却又描写诗人置身雨中，对雨听而不闻，从容高歌，潇洒徐行，全然没感到淋漓之苦的状态，这怎么可能是实写呢？接下来的“竹杖芒鞋轻胜马”也不太合常理。用竹杖芒鞋行泥泞之路，拖泥带水，怎比得上骑着高头大马急行如飞来得轻快？因此这“轻”恐怕不是写现实行路之轻，而应是无官一身轻。“一蓑烟雨任平生”也让人生疑。序言中已说“雨具先去”，怎会又出现了披蓑在雨中穿行？看来应是想象之景。“回首向来萧瑟处，归去，也无风雨也无晴”若按自然的逻辑也很难解释得通。雨过天晴，应该是“已无风雨正是晴”，怎会是“也无晴”？所以，这里的“晴”不会单纯指天晴。  
+　　由此可见，这些都是写作者心中想象之事而非眼前之景，全词就是作者着力刻画的一个“也无风雨也无晴”的“归去”白日梦！  
+　　纵观全词，一种醒醉全无、无喜无悲、胜败两忘的人生哲学和处世态度呈现在读者面前。“也无风雨也无晴”，是一种宠辱不惊、胜败两忘、旷达潇洒的境界，是一种“至人无己，神人无功，圣人无名”的境界，是一种回归自然，天人合一，宁静超然的大彻大悟。 
+
+
+
+苏轼，（1037年1月8日-1101年8月24日）字子瞻、和仲，号铁冠道人、东坡居士，世称苏东坡、苏仙，汉族，眉州眉山（四川省眉山市）人，祖籍河北栾城，北宋著名文学家、书法家、画家，历史治水名人。苏轼是北宋中期文坛领袖，在诗、词、散文、书、画等方面取得很高成就。文纵横恣肆；诗题材广阔，清新豪健，善用夸张比喻，独具风格，与黄庭坚并称“苏黄”；词开豪放一派，与辛弃疾同是豪放派代表，并称“苏辛”；散文著述宏富，豪放自如，与欧阳修并称“欧苏”，为“唐宋八大家”之一。苏轼善书，“宋四家”之一；擅长文人画，尤擅墨竹、怪石、枯木等。与韩愈、柳宗元和欧阳修合称“千古文章四大家”。作品有《东坡七集》《东坡易传》《东坡乐府》《潇湘竹石图卷》《古木怪石图卷》等。
